--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -15,7 +15,7 @@ byte-unit = "4.0.19"
 bytes = "1.4.0"
 clap = { version = "4.3.23", features = ["derive", "cargo"] }
 core_affinity = "0.8.1"
-dashmap = "5.5.0"
+lightning-containers = { git = "ssh://git@192.168.10.134/shisoft-x/Lightning.git", branch = "develop" }
 futures = "0.3.28"
 futures-util = "0.3.28"
 log = "0.4.20"
