--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -32,6 +32,7 @@ tracing-log = "0.1.3"
 tracing-subscriber = { version = "0.3.17", default-features = false, features = ["std", "fmt"] }
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-util = { version = "0.7.8", features = ["full"] }
+parking_lot = "*"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
