--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -33,6 +33,7 @@ tracing-subscriber = { version = "0.3.17", default-features = false, features = 
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-util = { version = "0.7.8", features = ["full"] }
 parking_lot = "*"
+bincode = "1.3.3"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
