--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -35,5 +35,10 @@ tokio-util = { version = "0.7.8", features = ["full"] }
 parking_lot = "*"
 bincode = "1.3.3"
 
+hyper = { version = "1", features = ["full"] }
+http-body-util = "0.1"
+hyper-util = { version = "0.1", features = ["full"] }
+url = "2.4.1"
+
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
