--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -39,6 +39,7 @@ hyper = { version = "1", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
 url = "2.4.1"
+dashmap = "5.5.3"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
