--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -40,6 +40,7 @@ http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
 url = "2.4.1"
 dashmap = "5.5.3"
+minstant = "0.1.4"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
