--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -41,6 +41,8 @@ hyper-util = { version = "0.1", features = ["full"] }
 url = "2.4.1"
 dashmap = "5.5.3"
 minstant = "0.1.4"
+serde_json = "1.0.108"
+rayon = "1.8.0"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
