--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -20,7 +20,6 @@ futures = "0.3.28"
 futures-util = "0.3.28"
 log = "0.4.20"
 socket2 = { version = "0.5.3", features = ["all"] }
-num_cpus = "1.16.0"
 num-derive = "0.4.0"
 num-traits = "0.2.16"
 rand = { version = "0.8.5", features = ["small_rng"] }
@@ -43,6 +42,7 @@ dashmap = "5.5.3"
 minstant = "0.1.4"
 serde_json = "1.0.108"
 rayon = "1.8.0"
+affinity = "0.1.2"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
