--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -43,6 +43,10 @@ minstant = "0.1.4"
 serde_json = "1.0.108"
 rayon = "1.8.0"
 affinity = "0.1.2"
+bump-allocator = "0.1.2"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
+
+[features]
+bumpallocator = []
