--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -45,6 +45,11 @@ rayon = "1.8.0"
 affinity = "0.1.2"
 bump-allocator = "0.1.2"
 
+lockfree-cuckoohash = "0.1.0"
+concache = "0.2.1"
+cht = "0.5"
+scc = "*"
+
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = { version ="0.5.4", optional = true }
 
