--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -44,6 +44,7 @@ serde_json = "1.0.108"
 rayon = "1.8.0"
 affinity = "0.1.2"
 bump-allocator = "0.1.2"
+flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
 
 lockfree-cuckoohash = "0.1.0"
 concache = "0.2.1"
