Pin scc to 3.1.0 to restore compatibility with the current nightly toolchain.
This avoids the previous sdd lifetime error during release builds while keeping existing scc sync API usage intact.

Made-with: Cursor

--- a/memcrs/Cargo.toml
+++ b/memcrs/Cargo.toml
@@ -50,7 +50,7 @@ libc = "*"
 lockfree-cuckoohash = "0.1.0"
 concache = "0.2.1"
 cht = "0.5"
-scc = "*"
+scc = "=3.1.0"
 contrie = "0.1"
 flurry = "0.4"
 env_logger = "0.11.8"
